# metacall-treesitter-python

./: .gitignore  CMakeLists.txt  README.md  test.py
src/: main.cpp
